--- a/css/main.css
+++ b/css/main.css
@@ -232,10 +232,11 @@ div.search-form
 .input-container {
     background: url(../images/test.jpg) no-repeat;
 }
+
 .input-container input{
-    height:28px;
-    line-height:28px;/*results in nice text vertical alignment*/
+    height:32px;
+    line-height:32px;
     border:none;
-    padding:0 10px;/*don't start input text directly from the edge*/
-    width:148px;/*full width - grey on the side - 2*10px padding*/
+    padding:0 10px;
+    width:250px;
 }
