--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body
 	padding: 0;
 	color: #555;
 	font: normal 10pt Arial,Helvetica,sans-serif;
-	background: #EFEFEF;
+	background: #EF0000;
 }
 
 #page
@@ -257,4 +257,87 @@ padding:0 10px;
 	bottom: 0;
 	position: relative;	
 	clear: both;
+}
+
+.layout-main-footer h3 {
+	color: #CCC;
+	font-size: 16px;
+}
+
+.layout-main-footer .copyright {
+	font-size: 11px;
+	margin: 30px 0 0 0;
+	text-align: center;
+}
+
+.layout-main-footer ul.menu,.layout-main-footer ul.menu ul,.layout-main-footer ul.menu li
+	{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.layout-main-footer ul.menu ul {
+	margin: 0 0 0 10px;
+}
+
+.layout-main-footer ul.menu li.main {
+	display: block;
+	float: left;
+	width: 150px;
+	margin: 0 0 1em 0;
+	min-height: 125px;
+}
+
+.layout-main-footer .tweets,.layout-main-footer .tweets li {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.layout-main-footer .tweets li {
+	margin: 0 0 5px;
+}
+
+.layout-main-footer .tweets .time {
+	color: #666;
+}
+
+.layout-main-footer .social {
+	width: 160px;
+	margin: 0 auto 0 auto;
+	padding: 0;
+}
+
+.layout-main-footer .social li {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: inline;
+}
+
+.layout-main-footer .social li a {
+	float: left;
+	height: 0;
+	padding-top: 32px;
+	width: 32px;
+	margin: 0 0 0 5px;
+	overflow: hidden;
+	background: url(img/social.png) no-repeat;
+}
+
+.layout-main-footer .social li.twitter a {
+	background-position: -3px -4px;
+}
+
+.layout-main-footer .social li.facebook a {
+	background-position: -115px -4px;
+}
+
+.layout-main-footer .social li.linkedin a {
+	background-position: -78px -4px;
+}
+
+.layout-main-footer .social li.feeds a {
+	background-position: -40px -4px;
 }
