--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -313,6 +313,8 @@ table.tablefront td{
 }
 
 .col-sm-3{
+	box-sizing:border-box;
+	-moz-box-sizing:border-box; /* Firefox */
 	position: relative;
 	left-padding:5px;
 	min-height: 1px;
@@ -349,7 +351,7 @@ table.tablefront td{
 	position: relative;
 	z-index: 1;
 	width: 100%;
-	height: 56px;
+	height: 53px;
 	background-color: #d0f9fb
 }
 
@@ -375,34 +377,33 @@ table.tablefront td{
 #PageTop nav li {
 	display: inline;
 	font-size: 0;
-	text-shadow: 1px 1px 0px rgba(64, 64, 64, 0.3)
+	text-shadow: 1px 1px 0px rgba(64, 64, 64, 0.3);
 }
 
-#PageTop nav li a,#PageTop nav li.logo>span {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	display: inline-block;
-	padding: 3px 20px 1px;
+#PageTop nav li a {
+
+	padding: 5px 10px 20px 50px;
 	font-size: 14px;
-	line-height: 16px;
-	font-weight: 700;
 	color: #565656;
-	line-height: 41px;
 	outline: none
+}
+
+#PageTop div.logo {
+	display:inline;
+	position: absolute;
+	margin-left:5em;
 }
 
 #PageTop div.actions {
 	position: absolute;
-	top: 15px;
+	top: 20px;
 	right: 0;
-	line-height: 16px;
 	text-shadow: 1px 1px 0px rgba(64, 64, 64, 0.4)
 }
 
 #PageTop div.actions>a {
 	color: #565656;
-	margin: 0 0 0 15px
+	margin: 0 0 0 0px
 }
 
 #PageTop div.actions>a.u {
