--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -158,7 +158,7 @@ table.tablefront td{
 
 .aspect-ratio {
 	overflow: hidden;
-	position: relative
+	position: relative;
 }
 
 .aspect-ratio:before {
@@ -190,9 +190,8 @@ table.tablefront td{
 	padding-top: 56.25%
 }
 
-.form-base input[type=text],.form-base input[type=password],.form-base input[type=date],.form-base textarea,.form-base select
-	{
-	font-size: 1em;
+.form-base input[type=text],.form-base input[type=password],.form-base input[type=date],.form-base textarea,.form-base select{
+	font-size: 1.3em;
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	border: 1px solid #e4ddd7;
 	margin: 0
@@ -233,7 +232,6 @@ table.tablefront td{
 	vertical-align: middle;
 	cursor: pointer;
 	line-height: 1em;
-	font-size: 15px;
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	border-radius: 3px;
 	padding: 10px 17px;
@@ -264,7 +262,9 @@ table.tablefront td{
 .btn-search-cta {
 	background-color: #187489;
 	border-color: #176977;
-	color: #fff
+	color: #fff;
+	height: 45px;
+	width: 100px;
 }
 
 .btn-search-cta:hover {
@@ -274,7 +274,7 @@ table.tablefront td{
 
 .btn-sm {
 	padding: 8px 12px;
-	font-size: 14px
+	font-size: 1.3em;
 }
 
 .container {
@@ -466,6 +466,8 @@ table.tablefront td{
     line-height:32px;
     padding:0 10px;
     width:250px;
+    border: 1px solid #e4ddd7;
+    border-radius: 3px
 }
 
 #tc_checkbox
