--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -352,7 +352,7 @@ table.tablefront td{
 	z-index: 1;
 	width: 100%;
 	height: 53px;
-	background-color: #d0f9fb
+	background-color: #A8E9FB;
 }
 
 #PageTop.translucent {
