few more changes

--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -434,9 +434,13 @@ table.tablefront td{
 	height:500px;
 	margin:auto;
 	margin-top:35px;
-	font-family:Tahoma;
 	font-size:12px;
-	border-radius:5px
+	-webkit-border-radius: 58px;
+	-moz-border-radius: 58px;
+	border-radius: 58px;
+	-webkit-box-shadow: 2px 2px 4px #888;
+	-moz-box-shadow: 2px 2px 4px #888;
+	box-shadow: 2px 2px 4px #888;
 }
 
 #loginDiv
@@ -445,6 +449,15 @@ table.tablefront td{
 	width:390px;
 	height:300px;
 	float:left;
+	display:inline-block;
+}
+
+#SignInDiv
+{
+	margin:0 auto;
+	width:390px;
+	height:300px;
+	float:right;
 	display:inline-block;
 }
 
@@ -479,8 +492,8 @@ table.tablefront td{
 .loginTblSpan{
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	text-align: center;
-	margin-top:20px;
-	margin-bottom:20px;
+	margin-top:10px;
+	margin-bottom:10px;
 	color: #737373;
 	font-size: 28px;
 	font-weight: bold;
