--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -278,7 +278,7 @@ table.tablefront td{
 	height: 45px;
 	width: 100px;
 	padding: 8px 12px;
-	font-size: 1.3em;	
+	font-size: 1.3em;
 }
 
 .btn-login-cta:hover {
@@ -449,7 +449,7 @@ table.tablefront td{
 {
 	margin:0 auto;
 	width:390px;
-	height:300px;
+	height:100%;
 	float:left;
 	display:inline-block;
 }
@@ -458,7 +458,7 @@ table.tablefront td{
 {
 	margin:0 auto;
 	width:390px;
-	height:300px;
+	height:100%;
 	float:right;
 	display:inline-block;
 }
@@ -474,7 +474,7 @@ table.tablefront td{
 	padding:5px;
 }
 
-.login_tbl input{
+input{
 	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 14px;
     height:32px;
@@ -502,7 +502,8 @@ table.tablefront td{
 	line-height: 32px;
 	padding: 0 11px;
 	display: block;
-	text-shadow: 1px 1px 0px rgba(64, 64, 64, 0.2)
+	text-shadow: 1px 1px 0px rgba(64, 64, 64, 0.2);
+	text-color:red;
 }
 
 .loginImageSpan{
@@ -516,3 +517,36 @@ table.tablefront td{
 	font-size: 14px;
 }
 
+#CreateLabel
+{
+	font-size: 12px;
+}
+
+.bubble {
+  position: absolute;
+  display: inline-block;
+  background-color:#BE4B49;
+  margin-left:10px;
+  padding:10px;
+  text-align:center;
+  color:#eee;
+  -moz-border-radius:10px;
+  -webkit-border-radius:10px;
+  -webkit-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 0 3px rgba(0,0,0,0.25);
+  box-shadow: 0px 0 3px rgba(0,0,0,0.25); 
+  border-radius:10px;
+}
+.bubble:after {
+  position: absolute;
+  display: block;
+  content: "";  
+  border-color: #BE4B49 transparent transparent transparent;
+  border-style: solid;
+  border-width: 10px;
+  height:0;
+  width:0;
+  position:absolute;
+  left:-10px;
+  top:0px;
+}
