--- a/css/main.css
+++ b/css/main.css
@@ -498,23 +498,32 @@ padding:0 10px;
    width:100%;
 }
 
-#SignInPopUpdiv {
+.SignInPopUpdiv {
 	position:absolute;
 	background:#fff;
 	border:5px solid #000;
 	z-index: 9002;
 	border:1px solid grey;
 	width:500px;
-	height:500px;
+	height:250px;
 	margin:auto;
-	margin-top:35px;
+	margin-top:100px;
 	font-size:12px;
-	-webkit-border-radius: 58px;
-	-moz-border-radius: 58px;
-	border-radius: 48px;
-	-webkit-box-shadow: 2px 2px 4px #888;
-	-moz-box-shadow: 2px 2px 4px #888;
-	box-shadow: 2px 2px 4px #888;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	border-radius: 20px;
+	-webkit-box-shadow: 2px 2px 2px #aaa;
+	-moz-box-shadow: 2px 2px 2px #aaa;
+	box-shadow: 2px 2px 2px #aaa;
+	text-align: center;
+   	position:absolute;   
+}
+
+.SignInPopUpdiv .innerRow{
+	border:none;
+	margin: auto;
+	position: relative;	
+	padding-top:40px;
 }
 
 #SignInPopUpdiv a {position:relative; top:20px; left:20px}
