--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -543,6 +543,13 @@ top: 200px;
 position: relative;
 }
 
+#SuccessDivId
+{
+width:60%; 
+border:1px solid green; 
+background-color:#DFF2BF;	
+}
+
 .SuccessDiv h4
 {
  text-align: center;
