--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -223,85 +223,6 @@ table.tablefront td{
 	width: 100%
 }
 
-.btn {
-	display: inline-block;
-	border-style: solid;
-	border-width: 2px;
-	text-align: center;
-	vertical-align: middle;
-	cursor: pointer;
-	line-height: 1em;
-	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	border-radius: 3px;
-	padding: 10px 17px;
-	font-size: 1.5em;
-	font-weight:bold;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-o-user-select: none;
-	user-select: none;
-}
-
-.btn:focus {
-	outline: thin dotted #333;
-	outline: 5px auto -webkit-focus-ring-color;
-	outline-offset: -2px
-}
-
-.btn:hover,.btn:focus {
-	text-decoration:none;
-}
-
-.btn:active {
-	outline: 0;
-	-webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-	box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125)
-}
-
-.btn-search-cta {
-	background-color: #669F51;
-	border-color: #5A8C45;
-	color: #fff;
-	height: 45px;
-	width: 100px;
-}
-
-.btn-search-cta:hover {
-	background-color: #5A8C45
-}
-
-.btn-login-cta {
-	background-color: #669F51;
-	border-color: #5A8C45;
-	color: #fff;
-	height: 45px;
-	width: 100px;
-	padding: 8px 12px;
-	font-size: 1.5em;
-}
-
-.btn-login-cta:hover {
-	background-color: #5A8C45;
-}
-
-.btn-userprofile-cta {
-	background-color: #669F51;
-	border-color: #5A8C45;
-	color: #fff;
-	height: 50px;
-	width: 150px;
-}
-
-.btn-userprofile-cta:hover {
-	background-color: #5A8C45;
-}
-
-.btn-sm {
-	padding: 8px 12px;
-	font-size: 1.5em;
-}
-
 .container {
 	margin-right: auto;
 	margin-left: auto;
@@ -402,7 +323,7 @@ table.tablefront td{
   	border-left: 0;
   	border-top: 0;
   	border-bottom: 0;
-  	border-right-style:double;
+  	border-right-style:groove;
 }
 
 #PageTop div.actions ul li a:hover {
@@ -447,11 +368,24 @@ table.tablefront td{
 
 .SignIn-Login
 {
-	margin-top:-45px;
+	margin-top:-20px;
 	height: 100%;
+	z-index: 12;
+	background: #FAFDFF;
 }
 
 .SignIn input{
+	position:relative; 
+	top:10px;
+	height:45px;
+    font-size: 1.5em;
+    line-height:32px;
+    padding:0 5px;
+    border: 1px solid #e4ddd7;
+    border-radius: 6px;
+}
+
+.input{
 	position:relative; 
 	top:10px;
 	height:45px;
