--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,7 @@ padding:0 10px;
 }
 
 .layout-main-footer h3 {
-	color: #CCC;
+	color: #E0E5E9;
 	font-size: 16px;
 }
 
@@ -349,7 +349,7 @@ padding:0 10px;
 }
 
 .foot-link_item:first-child,.foot-link_item h3 {
-	color: #949494;
+	color: #fff;
 	font-size: 1em;
 	font-weight: 700;
 	margin: 0 0 0.625em
@@ -402,9 +402,9 @@ padding:0 10px;
 }
 
 .site-footer {
-	background: #3a3a3a;
-	color: #949494;
-	padding-bottom: 2.5em;
+	background: #5A8C45;
+	color: #fff;
+	padding-bottom: 1.5em;
 	clear: both;
 }
 
@@ -419,11 +419,12 @@ padding:0 10px;
 }
 
 .site-footer a {
-	color: #949494
+	color: #e7e7e7
 }
 
 .site-footer a:hover {
-	color: #b5b5b5
+	color: #b5b5b5;
+	text-decoration: none;
 }
 
 .footer-links {
@@ -465,7 +466,7 @@ padding:0 10px;
 }
 
 .foot-link_item:first-child,.foot-link_item h3 {
-	color: #949494;
+	color: #fff;
 	font-size: 1em;
 	font-weight: 700;
 	margin: 0 0 0.625em 0
@@ -523,7 +524,9 @@ padding:0 10px;
 	border:none;
 	margin: auto;
 	position: relative;	
-	padding-top:40px;
+	padding-top:10px;
+	padding-left:10px;
+	float:left;
 }
 
 #SignInPopUpdiv a {position:relative; top:20px; left:20px}
@@ -538,3 +541,71 @@ padding:0 10px;
     border: 1px solid #e4ddd7;
     border-radius: 6px
 }
+
+
+.btn {
+   border-top: 1px solid #73f071;
+   background: #83d473;
+   background: -webkit-gradient(linear, left top, left bottom, from(#318000), to(#83d473));
+   background: -webkit-linear-gradient(top, #318000, #83d473);
+   background: -moz-linear-gradient(top, #318000, #83d473);
+   background: -ms-linear-gradient(top, #318000, #83d473);
+   background: -o-linear-gradient(top, #318000, #83d473);
+   padding: 12.5px 10px;
+   -webkit-border-radius: 4px;
+   -moz-border-radius: 4px;
+   border-radius: 4px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: #fff;
+   font-size: 16px;
+   font-family: 'Open Sans',Georgia, serif;
+   font-weight:bolder;
+   text-decoration: none;
+   vertical-align: middle;
+   height: 45px;
+   }
+.btn:hover {
+   border-top-color: #2c960f;
+   background: #2c960f;
+   color: #ccc;
+   }
+.btn:active {
+   border-top-color: #05870a;
+   background: #05870a;
+   }
+   
+ 
+ .profile-glassy{
+ 	background: rgba(255,255,255,0.6);
+ 	display: block;
+ 	clear: both;
+ 	width: 30%;
+	text-indent: 10px;
+	padding-bottom: 10px; 	
+ }  
+ 
+ .profile-glassy hr{
+ 	margin-left: 15px;
+ 	margin-right: 15px;
+ 	border-color: #ccc;
+ }
+ 
+ .profile-glassy h3{
+ 	padding-top: 8px;
+ 	top: 20px;
+ 	font-weight: bolder;	
+ }
+ .profile-glassy p{
+ 	padding-left: 6px;
+ 	font-size: 16px;
+ }
+ 
+  .profile-glassy span{
+ 	padding-left: 17px;
+ 	padding-top:20px;
+ 	font-size: 12px;
+ 	font-weight: bolder;
+ }
