--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -296,8 +296,6 @@ table.tablefront td{
 	display: block;
 	position: relative;
 	margin: 0 auto;
-	max-width: 1150px;
-	min-width: 1100px
 }
 
 #PageTop nav ul {
@@ -378,11 +376,18 @@ table.tablefront td{
 	position:relative; 
 	top:10px;
 	height:45px;
-    font-size: 1.5em;
-    line-height:32px;
-    padding:0 5px;
+    font-size: 1.4em;
     border: 1px solid #e4ddd7;
     border-radius: 6px;
+}
+
+.SignIn input[type='submit']{
+	top: 6px;
+	height:46px;
+	width: auto;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin: 0 auto;
 }
 
 .input{
@@ -667,3 +672,17 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 	background:url(../images/star-active.png) repeat-x center right;
 }
 
+.reviewGlassy {
+	width: auto;
+	color: #000000;
+	background-color: #e5eecc;
+	margin: 0px;
+	padding: 5px;
+	border: 1px solid #d4d4d4;
+	background-image: linear-gradient(#ffffff, #e5eecc 100px);
+	margin-top: 10px;
+}
+
+.reviewGlassy:hover {
+	background-image: linear-gradient(#e9e9e9, #f5f5f5 100px);
+}
