--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -686,3 +686,25 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 .reviewGlassy:hover {
 	background-image: linear-gradient(#e9e9e9, #f5f5f5 100px);
 }
+
+.row {
+	margin-left:-1px;margin-right:-15px;
+}
+.content {
+	position:absolute;top:0;left:0;bottom:0;right:0;
+}
+.widget-item-content {
+	display:block;line-height:1.4em;margin-left:60px;
+}
+.hr {
+	display:block;border-top:1px solid #e4ddd7;height:0;padding:0;margin:0 0 30px 0;font-size:0;
+}
+.container {
+	margin-right:auto;margin-left:auto;padding-left:50px;padding-right:400px;
+	}
+.widget-item-image {
+	float:left;margin-top:3px;width:50px;height:50px;
+	}
+.stars {
+	display:inline-block;white-space:nowrap;position:relative;font-size:0;vertical-align:middle;line-height:14px;height:14px;
+}
