--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -711,3 +711,6 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 .stars {
 	display:inline-block;white-space:nowrap;position:relative;font-size:0;vertical-align:middle;line-height:14px;height:14px;
 }
+.widget-item-image_main {
+	float:left;margin-top:3px;width:200px;height:250px;
+	}
