--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -11,82 +11,10 @@ body {
 	background-color: #fff
 }
 
-h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
-	font-weight: normal;
-	margin: 0 0 .4em .3em;
-	line-height: 1.2em;
-	
-}
-
-h1,.h1 {
-	font-size: 36px;
-	line-height: 1.1em;
-	font-weight: 300;
-	color: #83a248
-}
-
-h2,.h2 {
-	font-size: 26px
-}
-
 h3,.h3 {
 	font-size: 21px;
 	font-weight: 400;
 	margin-bottom: .2em;
-}
-
-h4,.h4 {
-	font-size: 15px;
-	text-transform: uppercase;
-	font-weight: 600
-}
-
-h5,.h5 {
-	font-size: 16px;
-	margin: 0 0 .4em 0em;
-	font-weight: 600
-}
-
-h6,.h6 {
-	font-size: 16px
-}
-
-@media ( max-width :767px) {
-	h1,.h1 {
-		font-size: 26px
-	}
-}
-
-
-p,.paragraph {
-	margin: 0 0 1em 0
-}
-
-p.condensed,.paragraph.condensed {
-	margin-bottom: .5em
-}
-
-.paragraph p {
-	display: inline
-}
-
-.small {
-	font-size: 13px;
-	line-height: 1.5em
-}
-
-.x-small {
-	font-size: 12px;
-	line-height: 1.5em
-}
-
-.large {
-	font-size: 18px;
-	line-height: 1.5em
-}
-
-.bold {
-	font-weight: bold
 }
 
 a,.link {
@@ -95,141 +23,6 @@ a,.link {
 	cursor: pointer
 }
 
-a .light,.link .light {
-	color: #71c1d7
-}
-
-a:hover,.link:hover,a:focus,.link:focus {
-	color: red;
-	text-decoration: underline
-}
-
-a.none,.link.none {
-	color: #666260;
-	text-decoration: none !important
-}
-
-a.block,.link.block {
-	display: block;
-	color: #666260;
-	text-decoration: none
-}
-
-ol {
-	margin: 0 0 1em 2.5em
-}
-
-ul {
-	padding: 0
-}
-
-li {
-	color: inherit
-}
-
-strong {
-	font-weight: 600
-}
-
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0
-}
-
-table.tablefront{
-	margin-left: auto;
-    margin-right: auto;	
-}
-
-table.tablefront th{
-	padding: 3px;
-}
-
-table.tablefront td{
-	padding: 3px;
-}
-
-#home-hero-image {
-	min-height: 180px;
-	max-height: 440px;
-	
-}
-
-.aspect-ratio {
-	overflow: hidden;
-	position: relative;
-}
-
-.aspect-ratio:before {
-	content: "";
-	display: block
-}
-
-.aspect-ratio .content {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0
-}
-
-.aspect-ratio .content>span {
-	height: 100%
-}
-
-.aspect-ratio.aspect-ratio-1-1:before {
-	padding-top: 100%
-}
-
-.aspect-ratio.aspect-ratio-1-2:before {
-	padding-top: 50%
-}
-
-.aspect-ratio.aspect-ratio-16-9:before {
-	padding-top: 56.25%
-}
-
-.form-base input[type=text],.form-base input[type=password],.form-base input[type=date],.form-base textarea,.form-base select{
-	font-size: 1.5em;
-	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	border: 1px solid #e4ddd7;
-	margin: 0
-}
-
-.form-base textarea {
-	height: 120px;
-	display: block;
-	resize: vertical
-}
-
-.form-base input[type=text],.form-base input[type=password],.form-base input[type=date],.form-base textarea
-	{
-	padding: 5px;
-	border-radius: 3px
-}
-
-#home-hero-image:before {
-	padding-top: 28.5%
-}
-
-#home-hero-image .content {
-	min-width: 631px
-}
-
-#home-tagline {
-	position: absolute;
-	top: 110px;
-	left: 0;
-	width: 100%
-}
-
-.container {
-	margin-right: auto;
-	margin-left: auto;
-	padding-left: 30px;
-	padding-right: 15px;
-}
 
 .widget-item-list>div {
 	margin-right: auto;
@@ -255,96 +48,10 @@ table.tablefront td{
 	width: 24%;
 }
 
-
 .list-unstyled,ul.unstyled {
 	margin: 0;
 	padding: 5px;
-	list-style-type: none
-}
-
-.list-unstyled>li,ul.unstyled>li {
-	margin: 0 0 1em 0;
-	background-image: none;
-	padding: 0
-}
-
-.list-unstyled.list-no-margin,ul.unstyled.list-no-margin {
-	margin-bottom: 0
-}
-
-.list-unstyled.list-no-inset,ul.unstyled.list-no-inset {
-	margin-left: 0
-}
-
-.list-spaceless>li {
-	margin-bottom: 0
-}
-
-#PageTop {
-	position: relative;
-	z-index: 1;
-	width: 100%;
-	height: 57px;
-	background-color: #A8E9FB;
-}
-
-#PageTop.translucent {
-	background-color: rgba(124, 178, 40, 0.9);
-	opacity: 0.70;
-}
-
-#PageTop nav {
-	display: block;
-	position: relative;
-	margin: 0 auto;
-}
-
-#PageTop nav ul {
-	display: inline;
-	padding: 0;
-	list-style: none;
-	font-size: 0;	
-}
-
-#PageTop nav li {
-	display: inline;
-	font-size: 0;
-	text-shadow: 1px 1px 4px rgba(64, 64, 64, 0.3);
-	height: 100%;
-}
-
-#PageTop nav li a {
-	padding: 5px 10px 20px 50px;
-	font-size: 12px;
-	color: #565656;
-	outline: none;
-	border: 1px silver;
-  	border-left: 0;
-  	border-top: 0;
-  	border-bottom: 0;
-  	border-right-style:groove;
-}
-
-#PageTop div.actions ul li a:hover {
-	text-decoration: none;
-	font-weight: bolder;
-	height:70%;
-	background-color: #B4EDFF;
-	z-index: 5;
-}
-
-#PageTop div.logo {
-	display:inline;
-	position: absolute;
-	margin-left:5em;
-}
-
-#PageTop div.actions {
-	position: absolute;
-	top: 20px;
-	right: 0;
-	font-weight: bolder;
-	text-shadow: 1px 1px 0px rgba(64, 64, 64, 0.4);
+	list-style-type: none;
 }
 
 .SignIn
@@ -389,17 +96,6 @@ table.tablefront td{
 	padding-left: 10px;
 	padding-right: 10px;
 	margin: 0 auto;
-}
-
-.input{
-	position:relative; 
-	top:10px;
-	height:45px;
-    font-size: 1.5em;
-    line-height:32px;
-    padding:0 5px;
-    border: 1px solid #e4ddd7;
-    border-radius: 6px;
 }
 
 .SignIn input[type='checkbox']{
@@ -485,17 +181,6 @@ background-color:#DFF2BF;
 .SuccessDiv p
 {
  padding-left:10px;
-}
-
-input{
-	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size: 1.5em;
-    height:32px;
-    line-height:32px;
-    padding:0 10px;
-    width:250px;
-    border: 1px solid #e4ddd7;
-    border-radius: 3px
 }
 
 #tc_checkbox
@@ -682,36 +367,9 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 	border: 1px solid #d4d4d4;
 	background-image: linear-gradient(#ffffff, #e5eecc 100px);
 	margin-top: 10px;
+	clear: both;
 }
 
 .reviewGlassy:hover {
 	background-image: linear-gradient(#e9e9e9, #f5f5f5 100px);
 }
-
-.row {
-	margin-left:-1px;margin-right:-15px;
-}
-.content {
-	position:absolute;top:0;left:0;bottom:0;right:0;
-}
-.widget-item-content {
-	display:block;line-height:1.4em;margin-left:80px;
-}
-.widget-item-content-review-page {
-	display:block;line-height:1.4em;margin-left:5px;
-}
-.hr {
-	display:block;border-top:1px solid #e4ddd7;height:0;padding:0;margin:0 0 30px 0;font-size:0;
-}
-.container {
-	margin-right:auto;margin-left:auto;padding-left:50px;padding-right:400px;
-	}
-.widget-item-image {
-	float:left;margin-top:3px;width:50px;height:50px;
-	}
-.stars {
-	display:inline-block;white-space:nowrap;position:relative;font-size:0;vertical-align:middle;line-height:14px;height:14px;
-}
-.widget-item-image_main {
-	float:left;margin-top:3px;width:200px;height:250px;
-	}
