--- a/css/dr_style.css
+++ b/css/dr_style.css
@@ -373,3 +373,161 @@ p.stars span a.star-50:hover, p.stars span a.star-50.active, p.stars span a.star
 .reviewGlassy:hover {
 	background-image: linear-gradient(#e9e9e9, #f5f5f5 100px);
 }
+
+.docTopContainer
+{
+	width:100%;
+	height:50px;
+	border:1px solid;
+	margin-top:60px;	
+}
+
+.docSearchContainer
+{
+	height: 100%;
+	margin-top:0;
+}
+
+.docMiscContainer
+{
+	width:14%; 
+	position: relative; 
+	display: inline-block; 
+	float:left;
+	height:100%;
+	border:1px solid silver;
+}
+
+.docListContainer
+{
+	width:30%;
+	position: relative;
+	display: inline-block;
+	float:left;
+	height:100%;
+	background: #e9e9e9;	
+}
+
+.docDetailsContainer
+{
+	width:55%;
+	position: relative;
+	display: inline-block;
+	float:left;
+	height:100%;
+	border:1px solid silver;
+	
+}
+
+#docList
+{
+	font-size:small;
+	background-image: linear-gradient(#f2f2f2, #e3e3e3 100px);
+	border:1px silver;
+	width:100%;
+	height:85px;
+}
+
+#docList:HOVER
+{
+	background-image: linear-gradient(#d2d2d2, #a2a2a2 100px);	
+}
+
+#docListHeader
+{
+	width:100%;
+	Height:21px;
+	background-image: linear-gradient(#999999, #777777 100px);	
+	font-weight: bold;
+	color: #fff;
+}
+
+#docListHeader ul
+{
+	list-style:none;
+	margin-top: 0px;
+	display:inline-block;
+	margin-left:-20px;	
+	width: auto;
+}
+
+#docListHeader ul li
+{
+	display:inline-block;
+	margin-left:0px;
+	padding-left:5px;
+	padding-right:30px;	
+	width: auto;
+}
+
+#docListHeader ul li:HOVER
+{
+	background-image: linear-gradient(#676767, #565656 100px);
+}
+
+#docImage
+{
+	width: 50px;
+	margin-left:10px;
+}
+
+#docSummaryDiv
+{
+	display: inline-block;
+	margin-left:10px;
+}
+
+#docDetails
+{
+	display: inline-block;
+	margin-left:10px;
+}
+
+#search-tabline {
+	border: 0;
+	background-image: linear-gradient(#ffffff, #f2f2f2 100px);
+	background: rgba(255,255,255,0.6);
+}
+
+#search-tabline .ui-tabs-active {
+	background-image: linear-gradient(#fbfbfb, #f6f6f6 100px);
+	background: #f4f4f4;
+	font-weight: bold;
+	
+}
+
+#search-tabline .ui-tabs-panel { 
+    background: #f5f3e5 url(http://code.jquery.com/ui/1.8.23/themes/south-street/images/ui-bg_highlight-hard_100_f5f3e5_1x100.png) repeat-x scroll 50% top; 
+    border-width: 0px 1px 1px 1px; 
+}
+
+#search-tabline .ui-tabs-nav{
+	background: transparent;
+	padding-left: 0px;  
+    border-width: 0px 0px 1px 0px; 
+    -moz-border-radius: 0px; 
+    -webkit-border-radius: 0px; 
+    border-radius: 0px; 
+}
+
+.span-XLarge
+{
+	font-weight: bold; 
+	font-size: 36px;
+}
+
+.spanLarge
+{
+	font-weight: bold; 
+	font-size: 24px;
+}
+
+.spanMedium
+{
+	font-size: 18px;
+}
+
+.spanSmall
+{
+	font-size: 12px;
+}
